--- a/public/chat.html
+++ b/public/chat.html
@@ -37,10 +37,13 @@
 
     <script id="location-message-template" type="text/html">
             <div class="message">
+                <div>
                 <p>
                     <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
+                </div>
+                </div>
                 <p><a href="{{url}}" target="_blank">My current location</a></p>
             </div>
         </script>
